# pyrams

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.binder/: environment.yml
.github/: dependabot.yml
.github/workflows/: main.yml  pullreq.yml  pypi_publish.yaml
docs/: apiref.rst  conf.py  fixdims.rst  index.rst  requirements.txt  xarray_metadata.rst
docs/_build/doctrees/: apiref.doctree  environment.pickle  fixdims.doctree  index.doctree
docs/_build/html/: .buildinfo  apiref.html  fixdims.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: fixdims.rst.txt  index.rst.txt
docs/api/: data_tools.rst  index.rst  plotting_tools.rst  thermo.rst
examples/: xarray.ipynb
pyrams/: __init__.py  data_tools.py  rams-vars.json  thermo.py  xarray.py
pyrams/examples/data/: normal-A-2019-07-02-000000-g1.h5
ramslibs/: __init__.py  data_tools.py  plotting_tools.py  thermo.py  units.py  xarray.py
